Text support multi line

--- a/CustomerDisplay_PD_220VFD/MainWindow.xaml
+++ b/CustomerDisplay_PD_220VFD/MainWindow.xaml
@@ -23,11 +23,11 @@
             <ComboBox Name="cbxCOMPort" Width="100" Margin="10 0" ItemsSource="{Binding Source={StaticResource portNames}}"></ComboBox>
             <Button x:Name="btnConnect" Click="btnConnect_Click">Connect</Button>
         </StackPanel>
-        <TextBox Grid.Row="2" TextWrapping="Wrap" MaxLength="40" Name="txtMessage" Width="280" Height="70" FontFamily="Courier New" FontSize="22" Text="12345678901234567890">
+        <TextBox Grid.Row="2" TextWrapping="Wrap" MaxLength="40" AcceptsReturn="True" MaxLines="2" Name="txtMessage" Width="280" Height="70" FontFamily="Courier New" FontSize="22" Text="12345678901234567890">
         </TextBox>
         <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Button  Margin="10" Name="btnSend" Click="btnSend_Click">Send</Button>
-            <Button  Margin="10" Name="btnClear" Click="btnClear_Click">Clear</Button>
+            <Button  Margin="10" Name="btnClear" Click="btnClear_Click" FontFamily="Courier New">Clear</Button>
         </StackPanel>
         
     </Grid>
